--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
 
 
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+    <script src="js/connection.js"></script>
     <script src="js/localdraw.js"></script>
     <script src="js/remotedraw.js"></script>
-    <!--<script src="js/menu.js"></script>-->
+    <script src="js/menu.js"></script>
 
 
     <!--
